--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -2,9 +2,7 @@
 // Typography
 //
 
-$font-size: 12px;
-$line-height: 14px;
-
+$font-size: 16px;
 $system-stack: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 $serif-stack: 'times new roman', times, georgia, serif;
 $sans-serif-stack: helvetica, arial, sans-serif;
@@ -14,16 +12,16 @@ $sans-serif-stack: helvetica, arial, sans-serif;
 // Colors
 //
 
-$background-color: #f00;
+$background-color: #fff;
 $main-color: #000;
 
 
 //
 // Space
 //
-
-// ***
-
+$line-height: 18px;
+$indent: 16px;
+$global-padding: 2 * $line-height;
 
 //
 //  Breakpoints
