--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -1,8 +1,13 @@
-* {
+*  {
   &::selection {
     background: $main-color;
     color: $background-color;
   }
+}
+
+html {
+  padding-left: $global-padding;
+  background: $background-color;
 }
 
 body {
@@ -10,13 +15,27 @@ body {
   color: $main-color;
   font-size: $font-size;
   line-height: $line-height;
-  font-familyl: $system-stack;
+  font-family: 'maren-serif', $sans-serif-stack;
+  max-width: 1200px;
+  position: relative;
+  overflow: hidden;
   @include screen-size('small') {}
+}
+
+strong {
+  font-weight: bold;
+  font-family: 'maren-serif-bold', $serif-stack;
+}
+
+i, em {
+  font-style: italic;
+  font-family: 'maren-serif-italic', $serif-stack;
 }
 
 a {
   color: $main-color;
   text-decoration: none;
+  font-family: 'maren-serif-bold';
   &:visited {
     color: $main-color;
   }
@@ -26,4 +45,163 @@ a {
   &:active {
     color: $main-color;
   }
+}
+
+p {
+  max-width: 70ch;
+  text-indent: $indent;
+}
+
+h2 {
+  p {
+    text-indent: 0;
+    margin-bottom: $line-height;
+  }
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  margin-top: $line-height;
+  margin-bottom: $line-height;
+}
+
+.content {
+  p:first-child {
+    text-indent: 0;
+  }
+}
+
+#search {
+  position: fixed;
+  right: $global-padding;
+  top: 2 * $line-height;
+  z-index: 1000;
+  label {
+    display: none;
+  }
+  input[type=submit] {
+    display: none;
+  }
+  div {
+    display: inline-block;
+  }
+  .search-button {
+    display: inline-block;
+  }
+  input[type=text] {
+    outline: none;
+    border: none;
+    border-bottom: 1px solid black;
+    font-family: 'maren-serif', $sans-serif-stack;
+    font-size: $font-size;
+    display: none;
+    height: $line-height;
+    line-height: $line-height;
+    background: none;
+  }
+  &.active-search {
+    input[type=text] {
+      display: inline-block;
+    }
+    .search-button {
+      display: none;
+    }
+  }
+}
+
+header {
+  position: fixed;
+  top: 2 * $line-height;
+  background: rgba(255,255,255,0.5);
+  z-index: 1000;
+}
+
+.main-menu-item {
+  margin-left: $indent;
+  font-family: 'maren-serif', $sans-serif-stack;
+  &:hover {
+    font-family: 'maren-serif-bold', $sans-serif-stack;
+ }
+}
+
+.column {
+  position: absolute;
+  &.left {
+    left: 0;
+    width: 30%;
+    height: 100vh;
+    margin-right: 60px;
+    overflow-x: scroll;
+    padding-top: 5 * $line-height;
+  }
+  &.right {
+    left: calc(30% + 60px);
+    // left: 30%;
+    width: calc(70% - 60px);
+    height: 100vh;
+    overflow-x: auto;
+    padding-right: $global-padding;
+    // @include hide-scroll;
+  }
+}
+
+.menu-item {
+  display: block;
+  margin-bottom: $line-height;
+  p {
+    text-indent: 0;
+    &::before {
+      content: "";
+      position: relative;
+      top: 4px;
+      text-align: center;
+      font-size: 20px;
+      height: 18px;
+      width: $indent;
+      overflow: hidden;
+      display: inline-block;
+      font-weight: bold;
+    }
+  }
+  &:hover, &.active-section-link {
+    p {
+      text-indent: 0;
+      &::before {
+        content: "●";
+      }
+    }
+  }
+
+}
+
+
+.menu-header {
+  display: block;
+  font-family: 'maren-serif-bold', $serif-stack;
+  margin-bottom: $line-height;
+  margin-top: $line-height;
+}
+
+*:target {
+  display: block !important;
+}
+
+.post-item {
+  display: none;
+  padding-top: 5 * $line-height + 6px;
+  padding-bottom: 5 * $line-height;
+}
+
+.single-post {
+  padding-top: 5 * $line-height + 6px;
+  padding-bottom: 5 * $line-height;
+}
+
+p:first-child {
+  text-indent: none !important;
+}
+
+.pdf {
+  margin-top: 2 * $line-height;
 }
