--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -7,6 +7,11 @@
 
 html {
   padding-left: $global-padding;
+  padding-right: $global-padding;
+  @include screen-size('small') {
+    padding-left: $global-padding / 2;
+    padding-right: $global-padding / 2;
+    }
   background: $background-color;
 }
 
@@ -19,17 +24,24 @@ body {
   max-width: 1200px;
   position: relative;
   overflow: hidden;
+  @include screen-size('small') {
+    overflow-y: auto;
+  }
   @include screen-size('small') {}
-}
-
-strong {
-  font-weight: bold;
-  font-family: 'maren-serif-bold', $serif-stack;
 }
 
 i, em {
   font-style: italic;
   font-family: 'maren-serif-italic', $serif-stack;
+}
+
+strong {
+  font-weight: bold;
+  font-family: 'maren-serif-bold', $serif-stack;
+  i, em {
+    font-style: italic;
+    font-family: 'maren-serif-bold-italic', $serif-stack;
+  }
 }
 
 a {
@@ -49,7 +61,14 @@ a {
 
 p {
   max-width: 70ch;
+  @include screen-size('small') {
+    width: 100%;
+  }
   text-indent: $indent;
+}
+
+pre {
+  max-width: 70ch;
 }
 
 h2 {
@@ -74,6 +93,9 @@ img {
 
 #search {
   position: fixed;
+  @include screen-size('small') {
+    display: none;
+  }
   right: $global-padding;
   top: 2 * $line-height;
   z-index: 1000;
@@ -112,9 +134,12 @@ img {
 
 header {
   position: fixed;
-  top: 2 * $line-height;
+  top: 1.5 * $line-height;
   background: rgba(255,255,255,0.5);
   z-index: 1000;
+  @include screen-size('small') {
+    width: 100%;
+  }
 }
 
 .main-menu-item {
@@ -127,36 +152,56 @@ header {
 
 .column {
   position: absolute;
+
   &.left {
     left: 0;
     width: 30%;
     height: 100vh;
     margin-right: 60px;
-    overflow-x: scroll;
+    @include screen-size('small') {
+      width: 100%;
+      height: auto;
+      margin-right: 0px;
+      position: static;
+      float: left;
+    }
     padding-top: 5 * $line-height;
   }
   &.right {
     left: calc(30% + 60px);
-    // left: 30%;
     width: calc(70% - 60px);
     height: 100vh;
+    @include screen-size('small') {
+      display: none;
+    }
     overflow-x: auto;
-    padding-right: $global-padding;
-    // @include hide-scroll;
+    @include hide-scroll;
+  }
+  &.about-column {
+    @include screen-size('small') {
+      display: block;
+      width: 100%;
+      height: auto;
+      margin-right: 0px;
+      position: static;
+      float: left;
+    }
+
   }
 }
 
 .menu-item {
   display: block;
   margin-bottom: $line-height;
+  font-family: 'maren-serif', $serif-stack !important;
   p {
     text-indent: 0;
     &::before {
       content: "";
       position: relative;
-      top: 4px;
-      text-align: center;
-      font-size: 20px;
+      top:3px;
+      text-align: left;
+      font-size:15px;
       height: 18px;
       width: $indent;
       overflow: hidden;
@@ -171,16 +216,21 @@ header {
         content: "●";
       }
     }
+    @include screen-size('small') {
+      p {
+        text-indent: 0;
+        &::before {
+          content: "";
+        }
+      }
+    }
   }
-
 }
-
 
 .menu-header {
   display: block;
   font-family: 'maren-serif-bold', $serif-stack;
   margin-bottom: $line-height;
-  margin-top: $line-height;
 }
 
 *:target {
@@ -195,7 +245,10 @@ header {
 
 .single-post {
   padding-top: 5 * $line-height + 6px;
-  padding-bottom: 5 * $line-height;
+  @include screen-size('small') {
+    padding-top: 2 * $line-height;
+  }
+  margin-bottom: 50 * $line-height;
 }
 
 p:first-child {
@@ -204,4 +257,49 @@ p:first-child {
 
 .pdf {
   margin-top: 2 * $line-height;
+}
+
+.about-list-item {
+  display: block;
+  margin-bottom: $line-height;
+  font-family: 'maren-serif', $serif-stack !important;
+}
+
+#close {
+  position: fixed;
+  display: none;
+  right: $global-padding;
+  top: 2 * $line-height;
+  z-index: 1000;
+  cursor: pointer;
+  &:hover {
+    font-family: 'maren-serif-bold', $sans-serif-stack;
+ }
+}
+
+.lightbox {
+  .column {
+    &.right {
+      @include screen-size('small') {
+        display: block;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        padding-right: $global-padding / 2;
+        padding-left: $global-padding / 2;
+        background: $background-color;
+      }
+    }
+  }
+  header {
+    @include screen-size('small') {
+      display: none;
+    }
+  }
+  #close {
+    @include screen-size('small') {
+      display: block;
+    }
+  }
 }
