--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -142,23 +142,23 @@ header {
   position: fixed;
   top: 0;
   padding-top: 1.5 * $line-height;
-  background: rgba(255,255,255,0.9);
+  background: rgba(255,255,255,0.95);
   z-index: 1000;
   width: 400px;
   padding-bottom: 19px;
-  box-shadow: -20px 0px 20px 5px white;
+  box-shadow: -20px 0px 20px 15px white;
   @include screen-size('small') {
     width: 100%;
     box-shadow: 0px 0px 20px 5px white;
   }
 }
 
-.curatorial {
-  a{
-    // padding-left: $indent + 2px;
-    margin-left: 1px;
-  }
-}
+// .curatorial {
+//   a{
+//     // padding-left: $indent + 2px;
+//     margin-left: -1px;
+//   }
+// }
 
 .column {
   position: absolute;
@@ -210,6 +210,9 @@ header {
 }
 
 .main-menu-item {
+  a{
+    margin-left: -1px;
+  }
   display: inline-block;
   font-family: 'maren-serif', $serif-stack !important;
   p {
@@ -222,6 +225,7 @@ header {
       content: "";
       left: 0;
       top: -1px;
+      left: -1px;
       position: absolute;
       text-align: center;
       font-size:12px;
@@ -239,6 +243,7 @@ header {
   &:first-child {
     p {
       &::before {
+        left: 0px;
         text-align: left;
       }
       text-indent: $indent !important;
@@ -247,7 +252,7 @@ header {
       }
     }
   }
-  &:hover, &.active-section-link {
+  &:hover, &.active {
     p {
       &::before {
         text-indent: 0;
@@ -335,29 +340,36 @@ header {
 .post-item {
   display: none;
   padding-top: 5 * $line-height;
+  @include screen-size('small') {
+    padding-top: 4 * $line-height;
+  }
   padding-bottom: 5 * $line-height;
   padding-right: 16px;
   a {
-    padding-left: $indent;
+    // padding-left: $indent;
+    text-indent: $indent;
     position: relative;
+    display: inline-block;
+    color: #aaaaaa;
     &::before {
       content: "";
-      left: 0;
+      left: -14px;
       top: -1px;
       position: absolute;
       text-align: left;
-      font-size:12px;
+      font-size: 12px;
       height: 14px;
       width: 14px;
       width: $indent;
+      text-align: left;
       @include screen-size('small') {
         width: $small-indent;
       }
-      display: block;
       font-weight: bold;
       letter-spacing: 0.01em;
     }
     &:hover {
+      color: $main-color;
       &::before {
         content: "●";
       }
@@ -463,5 +475,19 @@ p:first-child {
 .content, .single-post {
   p:first-child {
     text-indent: 0;
+  }
+}
+
+.external {
+  color: #aaaaaa !important;
+  &:active {
+    color: #aaaaaa !important;
+  }
+  &:visited {
+    color: #aaaaaa !important;
+  }
+
+  &:hover {
+    color: $main-color !important;
   }
 }
