--- a/fonts/serif-bold-italic.css
+++ b/fonts/serif-bold-italic.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "maren-serif-bold-italic";
+    font-family: "NimbusRomanDOT-BoldItalic";
     src: url("serif-bold-italic.eot");
     src: url("serif-bold-italic.eot?#iefix") format("embedded-opentype"),
          url("serif-bold-italic.woff2") format("woff2"),
