--- a/fonts/serif-bold.css
+++ b/fonts/serif-bold.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "maren-serif-bold";
+    font-family: "NimbusRomanDOT-Bold";
     src: url("serif-bold.eot");
     src: url("serif-bold.eot?#iefix") format("embedded-opentype"),
          url("serif-bold.woff2") format("woff2"),
