--- a/fonts/serif-italic.css
+++ b/fonts/serif-italic.css
@@ -5,7 +5,7 @@
          url("serif-italic.woff2") format("woff2"),
          url("serif-italic.woff") format("woff"),
          url("serif-italic.ttf") format("ttf"),
-         url("serif-italic.svg#NimbusRomanDOT-RegularItalic") format("svg");
+         url("serif-italic.svg#marenserifitalic") format("svg");
     font-style: italic;
-    font-weight: regular;
+    font-weight: 300;
 }
