--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -53,7 +53,7 @@ strong {
 a {
   color: $main-color;
   text-decoration: none;
-  font-family: 'maren-serif', $sans-serif-stack;
+  font-family: 'maren-serif', $serif-stack;
   display: inline-block;
   // padding-left: $indent;
   &:visited {
@@ -122,7 +122,7 @@ img {
     outline: none;
     border: none;
     border-bottom: 1px solid black;
-    font-family: 'maren-serif', $sans-serif-stack;
+    font-family: 'maren-serif', $serif-stack;
     display: none;
     height: $line-height;
     line-height: $line-height;
@@ -225,11 +225,11 @@ header {
     &::before {
       content: "";
       left: 0;
-      top: -1px;
+      top: 0px;
       left: -1px;
       position: absolute;
       text-align: center;
-      font-size:12px;
+      font-size: 11px;
       height: 14px;
       width: 14px;
       width: $indent;
@@ -292,10 +292,10 @@ header {
     &::before {
       content: "";
       left: 0;
-      top: -1px;
+      top: 0px;
       position: absolute;
       text-align: left;
-      font-size:12px;
+      font-size:11px;
       height: 14px;
       width: 14px;
       width: $indent;
@@ -305,7 +305,7 @@ header {
       // overflow: hidden;
       display: block;
       font-weight: bold;
-      letter-spacing: 0.01em;
+      letter-spacing: 0.001em;
 
     }
   }
@@ -355,10 +355,10 @@ header {
     &::before {
       content: "";
       left: -14px;
-      top: -1px;
+      top: 0px;
       position: absolute;
       text-align: left;
-      font-size: 12px;
+      font-size: 11px;
       height: 14px;
       width: 14px;
       width: $indent;
