--- a/fonts/serif-bold-italic.css
+++ b/fonts/serif-bold-italic.css
@@ -1,11 +1,11 @@
 @font-face {
-    font-family: "NimbusRomanDOT-BoldItalic";
+    font-family: "maren-serif-bold-italic";
     src: url("serif-bold-italic.eot");
     src: url("serif-bold-italic.eot?#iefix") format("embedded-opentype"),
          url("serif-bold-italic.woff2") format("woff2"),
          url("serif-bold-italic.woff") format("woff"),
          url("serif-bold-italic.ttf") format("ttf"),
-         url("serif-bold-italic.svg#NimbusRomanDOT-BoldItalic") format("svg");
+         url("serif-bold-italic.svg#marenserifbolditalic") format("svg");
     font-style: italic;
     font-weight: 700;
 }
