fixed menu header margin

--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -332,6 +332,7 @@ header {
   display: block;
   font-family: 'maren-serif-bold', $serif-stack;
   margin-bottom: $line-height;
+  margin-bottom: 14px;
   letter-spacing: 0.01em;
 }
 
